# WTFIS-CLI

./: Cargo.toml  README.md  update.sh
Formula/: wtfis.rb
shell/: wtfis.bash  wtfis.zsh
src/: main.rs
